test/functions/jplevyak/zeroarity-bound-error-2.good
zeroarity-bound-error-2.chpl:9: error: unresolved access of 'int(64)' by '()'
